--- a/accueil.html
+++ b/accueil.html
@@ -20,7 +20,7 @@
                         <a class="nav-link text-light" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="planets.html">Planètes</a>
+                        <a class="nav-link text-light" href="planetes.html">Planètes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="admin.html">Administration</a>
