--- a/accueil.html
+++ b/accueil.html
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="login.html">login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="signup.html">Inscription</a>
+                    </li>
                 </ul>
             </nav>
         </div>
