--- a/admin.html
+++ b/admin.html
@@ -229,6 +229,7 @@
         <input type="text" id="new-user-name" placeholder="Nom de l'utilisateur">
         <button onclick="addUser()">Ajouter Utilisateur</button>
     </div>
+    <div><a href="detail.html">cherche le planet</a></div>
 </section>
 
 <script>
