--- a/detail.html
+++ b/detail.html
@@ -66,7 +66,7 @@
         <div id="details"></div>
     </main>
     <div><a href="planet.html">retour a la page planet</a></div>
-
+<div><a href="quiz.html">repond au quiz</a></div>
     <footer>
         <p>© 2024 Système Solaire - Tous droits réservés.</p>
     </footer>
